================================================================================
CHANGELOG
================================================================================

	0.4.1.7
	Jul 1, 2009

	* extra/tablature.py: Raise the proper exceptions (closes issue #65).

================================================================================

	0.4.1.6
	Jun 29, 2009

	* extra/tablature.py: Added documentation and license (closes issue #59)
	* extra/tunings.py: Added get_Note(string, fret) to StringTuning.
	Closes issue #54.
	* extra/tablature.py: Do `fret` and `string` attribute checks on 
	Notes. Closes issue #64.

================================================================================

	0.4.1.5
	Jun 28, 2009

	* extra/tablature.py: Fixed bug in from_Suite, added add_headers (closes
	issue #62), mark beats in from_Bar (closes issue #60), added 
	instrument and tuning description (closes issue #61).

================================================================================

	0.4.1.4
	Jun 28, 2009

	* extra/tablature.py: Added from_Track (closes issue #5), added 
	get_qsize (closes issue #58), from_Composition (closes issue #56) 
	and from_Suite (closes issue #57)
	* containers/Suite.py: Overloaded the + operator
	
================================================================================

	0.4.1.3
	Jun 28, 2009

	* extra/tablature.py: Added tablature module that can convert 
	some of the mingus.containers to pretty ascii tablature. (issue #5)
	* extra/tunings.py: Sort and return fingerings on fitness. (Closes 
	issue #53)

================================================================================

	0.4.1.2
	Jun 28, 2009

	* extra/tunings.py: Added find_fingering method to StringTuning class.
	Function returns a list of possible fingerings for NoteContainers.
	(Closes issue #48)
	* containers/Note.py: Enhanced constructor. Can now be called with 
	already existing Note object (hardcopy) or an integer (conversion). 